--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,22 +8,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ 2.5, 2.6, 2.7, 3.0, jruby ]
-        gemfile: [ gemfiles/rails-6-1.gemfile ]
+        ruby: [ 2.7, '3.0', 3.1 ]
+        gemfile: [ gemfiles/rails-7-0.gemfile ]
         experimental: [ false ]
         include:
-          - ruby: 3.0
+          - ruby: 2.5
             gemfile: gemfiles/rails-6-0.gemfile
             experimental: false
-          - ruby: 3.0
-            gemfile: gemfiles/rails-7-0.gemfile
+          - ruby: 2.6
+            gemfile: gemfiles/rails-6-1.gemfile
             experimental: false
           - ruby: 3.0
             gemfile: gemfiles/rails-master.gemfile
             experimental: false
           - ruby: ruby-head
+            gemfile: gemfiles/rails-7-0.gemfile
+            experimental: false
+          - ruby: jruby
             gemfile: gemfiles/rails-6-1.gemfile
-            experimental: true
+            experimental: false
           - ruby: jruby-head
             gemfile: gemfiles/rails-6-1.gemfile
             experimental: false
